# libfranka_demo

./: CMakeLists.txt  README.md
CustomPrograms/: CMakeLists.txt  Cartesian_Force_Impedance_Control.cpp  Cartesian_Impedance_Control.cpp  EigenExamples.cpp  Makefile  TorqueControlGeneric.cpp  UtilizzoStateSaver.cpp  cmake_install.cmake
CustomPrograms/CustomLibrary/: CMakeLists.txt  StateSaver.cpp  StateSaver.h
common/: Makefile  cmake_install.cmake
examples/: Makefile  cmake_install.cmake
include/CustomLibraries/: definitions.h
